--- a/signin.html
+++ b/signin.html
@@ -71,7 +71,7 @@
          <label for="address">Address</label>
          <textarea id="address" name="address" placeholder="Enter Address" required></textarea>
        </div>
-            <button type="submit" class="submit-btn"><a href="user.html" >Sign Up</a></button>
+            <button type="submit" class="submit-btn">Sign Up</button>
          </form>
        </div>
      </div>
