--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <input type="text" placeholder="User Id">
             </div>
                         
-            <button class="login-btn">LOGIN</button>
+            <button class="login-btn"><a href="user.html">LOGIN</a></button>
             <div class="footer">
                 <i class="fas fa-lock"></i>
                 <a href="signin.html">Not a member?</a>
